--- a/Week0/index.html
+++ b/Week0/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet"type="text/css" href="style.css">
-<title> This website uses external CSS </title
+    <title> This website uses external CSS </title>
 </head>
 <body>
 <div id="divmain">
