--- a/Week0/index.html
+++ b/Week0/index.html
@@ -10,7 +10,7 @@
 Welcome TO The Site!
 </p>
 <div>
-<a> <img class="imagec" src="jayshree.JPG" width="182" height"160" /> </a>
+<a> <img class="imagec" src="sunrise.JPG" width="182" height"160" /> </a>
 </div>
 </div>
 <div id="divmain2">
