--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -57,13 +57,13 @@
                 </tr>
                 <tr>
                     <td>S.S.C</td>
-                    <td>madhyamik siksha mandal,Bhopal,India</td>
+                    <td>Madhyamik siksha mandal,Bhopal,India</td>
                     <td>85.57%</td>
                     <td>1994</td>
                 </tr>
                 <tr>
                     <td>H.S.C (Maths,Science)</td>
-                    <td>madhyamik siksha mandal, Bhopal(India)</td>
+                    <td>Madhyamik siksha mandal, Bhopal(India)</td>
                     <td>82.40%</td>
                     <td>1996</td>
                 </tr>
