--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -12,7 +12,7 @@
          <p style="font-size:18px">Fullstack web developer </p>
        </p>
        <p id="contact"> Contact details:<br>Address:<br>mobile:</p><br><a href="mailto:jaaishri@gmail.com" target="_blank"><p id="email">jaaishri@gmail.com</p></a> <br>
-<a href="Linkedin:www.linkedin.com/in/jayshree-u" target="_blank"><p id="URL"> www.linkedin.com/in/j-u</p></a>
+<a href="Linkedin:www.linkedin.com/in/jayshree-u" target="_blank"><p id="URL"> www.linkedin.com/in/jayshree-u</p></a>
      </div>
 </p>
      <div class="left">
