--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -79,7 +79,7 @@
                 </tr>
                 <tr>
                     <td>English6</td>
-                    <td>Hermods,Sweden </td>
+                    <td>Hermods (Sweden) </td>
                     <td>Grade B</td>
                     <td>2019</td>
                 </tr>
